--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Awesome project developed with TypeORM.",
   "type": "commonjs",
   "devDependencies": {
-    "ts-node": "10.9.1",
     "@types/node": "^16.11.10",
+    "ts-node": "10.9.1",
     "typescript": "4.5.2"
   },
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
-    "mysql": "^2.14.1",
+    "mysql2": "^3.9.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.3.19"
   },
